- fixed nowrap for button - restyled bullets for slider - relocated back links - removed icons

--- a/webapp/assets/_new/styles/tokens.scss
+++ b/webapp/assets/_new/styles/tokens.scss
@@ -274,6 +274,7 @@ $size-avatar-large: 114px;
  $size-button-large: 50px;
  $size-button-base: 36px;
  $size-button-small: 26px;
+ $size-button-tiny: 18px;
 
 /**
  * @tokens Size Images
